# third_party_libuv

./: .gitattributes  BUILD.gn  ChangeLog  Makefile.am  OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json  libuv.gni  libuv.ndk.json  libuv.para  libuv.para.dac
include/: uv.h
include/uv/: threadpool.h  unix.h  win.h
include/uv_ndk/: uv.h
src/: heap-inl.h  queue.h  random.c  threadpool.c  timer.c  uv-common.c  uv-common.h  uv_log.h  uv_trace.h
src/dfx/async_stack/: libuv_async_stack.c  libuv_async_stack.h
src/unix/: async.c  core.c  epoll.c  fs.c  getaddrinfo.c  getnameinfo.c  internal.h  linux.c  log_unix.c  loop.c  poll.c  process.c  signal.c
src/unix/ohos/: log_ohos.c  trace_ohos.c
src/win/: core.c  fs.c  internal.h  log_win.c  trace_win.c  util.c
test/: echo-server.c  run-tests.c  runner-unix.c  test-close-fd.c  test-dlerror.c  test-fs-copyfile.c  test-fs.c  test-get-passwd.c  test-getaddrinfo.c  test-getnameinfo.c  test-idna.c  test-list.h  test-spawn.c  test-strscpy.c  test-strtok.c  test-thread.c  test-timer.c
